remove extra js code, fix spacing between sections

--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,17 @@ body {
   scroll-behavior: smooth;
 }
 
+@keyframes fadeInFromBelow {
+  from {
+    opacity: 0;
+    transform: translateY(40px); /* Adjust the offset as needed */
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .header-container {
   display: flex;
   position: fixed;
@@ -169,7 +180,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  font-size: 15px;
+  font-size: 30px;
   gap: 10px;
   margin-right: 300px;
 }
@@ -221,7 +232,7 @@ h3 {
   margin: 0;
   letter-spacing: 2px;
   font-weight: 400;
-  font-size: 15px;
+  font-size: 17px;
   font-weight: 200;
 }
 
@@ -235,7 +246,7 @@ nav {
 
 nav a {
   color: gray;
-  font-size: 15px;
+  font-size: 17px;
   text-decoration: none;
   font-weight: 200;
   letter-spacing: 2px;
@@ -330,12 +341,18 @@ nav a:hover {
 }
 
 .about-me {
+  opacity: 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 30px;
   align-items: center;
-  margin-top: 150px;
+  margin-top: 200px;
+  animation: fadeInFromBelow 1s ease-in-out 0.5s forwards;
+  animation-delay: 1s;
+  -webkit-animation: fadeInFromBelow 1s ease-in-out 0.5s forwards; /* Safari and Chrome */
+  -moz-animation: fadeInFromBelow 1s ease-in-out 0.5s forwards; /* Firefox */
+  -o-animation: fadeInFromBelow 1s ease-in-out 0.5s forwards;
 }
 
 .about-me-photo img {
@@ -351,22 +368,40 @@ nav a:hover {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 150px;
+  gap: 50px;
+}
+
+.other .tech-stack .icon {
+  width: 20px;
+  height: 20px;
+}
+
+.other .tech-stack li {
+  font-size: 1.2em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
 }
 
 .showcase,
 .section-contact {
+  opacity: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 150px;
+  animation: fadeInFromBelow 1s ease-in-out 1.5s forwards;
+  -webkit-animation: fadeInFromBelow 1s ease-in-out 1.5s forwards; /* Safari and Chrome */
+  -moz-animation: fadeInFromBelow 1s ease-in-out 1.5s forwards; /* Firefox */
+  -o-animation: fadeInFromBelow 1s ease-in-out 1.5s forwards;
 }
 
 .showcase h3 {
   margin-bottom: 10px;
-  font-size: 1.7em;
-  font-weight: bold;
+  font-size: 4em;
+  font-weight: 600;
 }
 
 .carousel {
@@ -462,7 +497,7 @@ nav a:hover {
 }
 
 .about-me-content h3 {
-  font-size: 4em;
+  font-size: 5em;
   font-weight: 600;
 }
 
